navbar width overflow fix

--- a/src/scss/Navbar.scss
+++ b/src/scss/Navbar.scss
@@ -1,11 +1,11 @@
 .navbar {
-  width: 100%;
   height: 80px;
   background: #FFF;
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 10px 20px;
+  background:green;
 
   .container {
     width: 100%;
@@ -14,11 +14,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background: blue;
 
     .wrapper {
       width: 100%;
       height: 100%;
-      // background: aqua;
+      background: aqua;
       
       .links{
         width: 20%;
