--- a/src/scss/WorkoutForm.scss
+++ b/src/scss/WorkoutForm.scss
@@ -5,6 +5,7 @@
   border-radius: 10px;
   margin-top: 30px;
   box-shadow: -1px 4px 5px -2px rgba(0,0,0,0.75);
+  box-sizing: border-box;
 
   .container{
     width: 100%;
